# s4d

./: .gitignore  README.md  meson.build  meson_options.txt  todo.txt
data/: banana.dae  bean.dae  beast.dae  bunny.dae  cow.dae  crazy_torus.dae  cube.dae  dodecahedron.dae  effects.vert  hex.dae  line.frag  line.vert  maxplanck.dae  mesh.frag  mesh.vert  outline.frag  outline_ms.frag  peter.dae  resolve.frag  teapot.dae  test.dae  torus.dae
src/: app.cpp  app.h  engine.cpp  engine.h  gui.cpp  gui.h  main.cpp  platform.cpp  platform.h  scene_object.cpp  scene_object.h  undo.cpp  undo.h
src/lib/: 3d_math.h  bbox.h  camera.cpp  camera.h  gl.cpp  gl.h  lib.cpp  line.h  log.h  mat4.h  math.h  plane.h  quat.h  vec2.h  vec3.h  vec4.h
src/platform/: gl.cpp  gl.h  platform.cpp  platform.h
src/scene/: halfedge.cpp  halfedge.h  mesh_render.cpp  mesh_render.h  proc_objects.cpp  proc_objects.h  render.cpp  render.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  util.cpp  util.h
src/student/: meshedit.cpp
